<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:overScrollMode="never"
    android:padding="@dimen/_24sdp"
    android:scrollbars="none"
    tools:context=".activities.SingInActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:background="@color/clr_primaryDark">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome_back1"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="#FFFFFF"
            android:textSize="34sp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_to_continue1"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="#ABFFFFFF"
            android:textSize="@dimen/_15ssp"
            android:textStyle="bold"/>
        <EditText
            android:id="@+id/inputEmail"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginTop="@dimen/_40sdp"
            android:background="@color/Clr_primary"
            android:imeOptions="actionNext"
            android:hint="@string/email"
            android:textColorHint="#97C897"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:paddingStart="@dimen/_16sdp"
            android:paddingEnd="@dimen/_18sdp"
            android:textColor="@color/CLR_white"
            android:textSize="@dimen/_13ssp" />
        <EditText
            android:id="@+id/inputPassword"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:background="@color/Clr_primary"
            android:imeOptions="actionDone"
            android:hint="@string/password"
            android:textColorHint="#97C897"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:paddingStart="@dimen/_16sdp"
            android:paddingEnd="@dimen/_18sdp"
            android:textColor="@color/CLR_white"
            android:textSize="@dimen/_13ssp"/>
        <!--com.google.android.material.button.MaterialButton!-->
        <Button
            android:id="@+id/btn_SingIn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginTop="@dimen/_18sdp"
            android:background="#C64B17"
            android:text="@string/sing_in"
            android:textColor="@color/CLR_white"
            android:textSize="@dimen/_18ssp"
            app:cornerRadius="@dimen/_8ssp"/>

        <TextView
            android:id="@+id/textCreativeNewAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30sdp"
            android:text="@string/creative_new_account"
            android:textColor="@color/CLR_white"
            android:textSize="@dimen/_18ssp"
            android:textStyle="bold"/>
    </LinearLayout>
</ScrollView>