<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:overScrollMode="never"
    android:padding="@dimen/_24sdp"
    android:scrollbars="none"
    tools:context=".activities.SingUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:background="@color/clr_primaryDark">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_new_account"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/CLR_white"
            android:textSize="25sp"
            android:textStyle="bold" />
        
        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp">
            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/imageProfile"
                android:layout_width="@dimen/_80sdp"
                android:layout_height="@dimen/_80sdp"
                android:background="#8F8F8F"
                android:scaleType="centerCrop"
                app:riv_oval="true"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/add_image"
                android:textColor="@color/CLR_black"
                android:textSize="@dimen/_10ssp"/>
        </FrameLayout>

        <EditText
            android:id="@+id/inputName"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@color/Clr_primary"
            android:imeOptions="actionNext"
            android:hint="@string/name"
            android:textColorHint="#97C897"
            android:importantForAutofill="no"
            android:inputType="text"
            android:paddingStart="@dimen/_16sdp"
            android:paddingEnd="@dimen/_18sdp"
            android:textColor="@color/CLR_white"
            android:textSize="@dimen/_13ssp" />

        <EditText
            android:id="@+id/inputEmail"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginTop="@dimen/_4sdp"
            android:background="@color/Clr_primary"
            android:imeOptions="actionNext"
            android:hint="@string/email"
            android:textColorHint="#97C897"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:paddingStart="@dimen/_16sdp"
            android:paddingEnd="@dimen/_18sdp"
            android:textColor="@color/CLR_white"
            android:textSize="@dimen/_13ssp" />

        <EditText
            android:id="@+id/inputPassword"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginTop="@dimen/_6sdp"
            android:background="@color/Clr_primary"
            android:imeOptions="actionNext"
            android:hint="@string/password"
            android:textColorHint="#97C897"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:paddingStart="@dimen/_16sdp"
            android:paddingEnd="@dimen/_18sdp"
            android:textColor="@color/CLR_white"
            android:textSize="@dimen/_13ssp"/>
        <EditText
            android:id="@+id/inputConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginTop="@dimen/_6sdp"
            android:background="@color/Clr_primary"
            android:imeOptions="actionDone"
            android:hint="@string/confirm_password"
            android:textColorHint="#97C897"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:paddingStart="@dimen/_16sdp"
            android:paddingEnd="@dimen/_18sdp"
            android:textColor="@color/CLR_white"
            android:textSize="@dimen/_13ssp"/>
        <!--com.google.android.material.button.MaterialButton!-->
        <Button
            android:id="@+id/btn_SingUp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginTop="@dimen/_18sdp"
            android:background="#C64B17"
            android:text="@string/sing_up"
            android:textColor="@color/CLR_white"
            android:textSize="@dimen/_18ssp"
            app:cornerRadius="@dimen/_8ssp"/>
        <TextView
            android:id="@+id/textSingIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="@string/sing_in"
            android:textColor="@color/CLR_white"
            android:textSize="@dimen/_18ssp"
            android:textStyle="bold"/>
    </LinearLayout>
</ScrollView>